// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NoteWithLyric Component > renders current note snapshot 1`] = `
"<div data-v-abb92cc6="" class="note-with-lyric" style="width: 60px;">
  <div data-v-abb92cc6="" class="note-container">
    <div data-v-a4d447ea="" data-v-abb92cc6="" class="note-bar current-note" style="background-color: rgb(255, 0, 0); color: rgb(255, 255, 255); width: 60px; min-width: 40px;">
      <div data-v-a4d447ea="" class="note-content"><span data-v-a4d447ea="" class="note-label">C4</span></div>
    </div>
  </div>
  <div data-v-abb92cc6="" class="lyric">Hello</div>
</div>"
`;

exports[`NoteWithLyric Component > renders note with lyric snapshot 1`] = `
"<div data-v-abb92cc6="" class="note-with-lyric" style="width: 60px;">
  <div data-v-abb92cc6="" class="note-container">
    <div data-v-a4d447ea="" data-v-abb92cc6="" class="note-bar" style="background-color: rgb(255, 0, 0); color: rgb(255, 255, 255); width: 60px; min-width: 40px;">
      <div data-v-a4d447ea="" class="note-content"><span data-v-a4d447ea="" class="note-label">C4</span></div>
    </div>
  </div>
  <div data-v-abb92cc6="" class="lyric">Hello</div>
</div>"
`;

exports[`NoteWithLyric Component > renders note without lyric snapshot 1`] = `
"<div data-v-abb92cc6="" class="note-with-lyric" style="width: 60px;">
  <div data-v-abb92cc6="" class="note-container">
    <div data-v-a4d447ea="" data-v-abb92cc6="" class="note-bar" style="background-color: rgb(255, 0, 0); color: rgb(255, 255, 255); width: 60px; min-width: 40px;">
      <div data-v-a4d447ea="" class="note-content"><span data-v-a4d447ea="" class="note-label">C4</span></div>
    </div>
  </div>
  <!--v-if-->
</div>"
`;
